--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "@tokenfoundry/forge-sdk",
   "version": "0.0.0",
   "main": "src/index.js",
-  "module": "src/index.js",
   "private": false,
   "license": "MIT",
   "scripts": {
     "lint": "eslint --cache",
     "test": "jest"
   },
+  "files": [
+    "src",
+    "contracts",
+    "browser.js"
+  ],
   "dependencies": {
     "axios": "^0.18.0"
   },
