--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "contracts"
   ],
   "dependencies": {
-    "axios": "^0.18.0"
+    "axios": "^0.18.0",
+    "eventemitter3": "^3.1.0"
   },
   "peerDependencies": {
     "apollo-boost": "^0.1.27",
