--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "lint": "eslint --cache",
     "test": "jest"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn run lint ."
+    }
+  },
   "files": [
     "dist",
     "common",
@@ -35,6 +40,7 @@
     "@babel/preset-env": "^7.3.1",
     "@tokenfoundry/eslint-config": "^1.5.1",
     "eslint": "^5.15.1",
+    "husky": "^1.3.1",
     "jest": "^24.1.0",
     "rollup": "^1.6.0",
     "rollup-plugin-babel": "^4.3.2",
