--- a/package.json
+++ b/package.json
@@ -32,19 +32,20 @@
     "graphql-tag": "^2.10.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.3.3",
+    "@babel/core": "^7.4.3",
     "@babel/plugin-external-helpers": "^7.2.0",
-    "@babel/plugin-proposal-class-properties": "^7.3.4",
-    "@babel/plugin-proposal-object-rest-spread": "^7.3.4",
-    "@babel/plugin-transform-runtime": "^7.3.4",
-    "@babel/preset-env": "^7.3.1",
-    "@tokenfoundry/eslint-config": "^1.5.1",
-    "eslint": "^5.15.1",
+    "@babel/plugin-proposal-class-properties": "^7.4.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.4.3",
+    "@babel/plugin-transform-runtime": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
+    "@tokenfoundry/eslint-config": "^1.6.3",
+    "eslint": "^5.16.0",
     "husky": "^1.3.1",
-    "jest": "^24.1.0",
-    "rollup": "^1.6.0",
+    "jest": "^24.7.1",
+    "rollup": "^1.9.0",
     "rollup-plugin-babel": "^4.3.2",
-    "rollup-plugin-commonjs": "^9.2.1",
-    "rollup-plugin-json": "^3.1.0"
+    "rollup-plugin-commonjs": "^9.3.4",
+    "rollup-plugin-json": "^4.0.0",
+    "rollup-plugin-node-resolve": "^4.1.0"
   }
 }
