--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "eth-sig-util": "^2.1.2",
+    "ethereumjs-util": "^6.1.0",
     "eventemitter3": "^3.1.0"
   },
   "peerDependencies": {
