--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Custom
 dist
+docs
 
 # Created by https://www.gitignore.io/api/node,osx,windows,linux
 # Edit at https://www.gitignore.io/?templates=node,osx,windows,linux
