--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "scripts": {
     "build": "rollup -c",
     "lint": "eslint --cache",
+    "jsdoc:deploy": "gh-pages -d docs",
+    "jsdoc": "jsdoc -c jsdoc.conf.js",
     "test": "jest"
   },
   "husky": {
@@ -41,8 +43,10 @@
     "@babel/preset-env": "^7.4.3",
     "@tokenfoundry/eslint-config": "^1.6.3",
     "eslint": "^5.16.0",
+    "gh-pages": "^2.0.1",
     "husky": "^1.3.1",
     "jest": "^24.7.1",
+    "jsdoc": "^3.5.5",
     "rollup": "^1.9.0",
     "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-commonjs": "^9.3.4",
