--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,9 @@
 {
   "presets": [
     [
-      "@babel/preset-env",
+      "@babel/env",
       {
-        "targets": {
-          "node": "current"
-        }
+        "modules": false
       }
     ]
   ],
