--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "daisy-sdk",
-  "version": "0.2.1",
+  "version": "0.3.0-beta.2",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
   "jsnext:main": "dist/index.es.js",
@@ -28,22 +28,22 @@
     "axios": "^0.18.0",
     "eth-sig-util": "^2.1.2",
     "ethereumjs-util": "^6.1.0",
-    "eventemitter3": "^3.1.0"
+    "eventemitter3": "^3.1.2"
   },
   "peerDependencies": {},
   "devDependencies": {
-    "@babel/core": "^7.4.3",
+    "@babel/core": "^7.4.4",
     "@babel/plugin-external-helpers": "^7.2.0",
-    "@babel/plugin-proposal-class-properties": "^7.4.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.4.3",
-    "@babel/preset-env": "^7.4.3",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
     "@tokenfoundry/eslint-config": "^1.6.3",
     "eslint": "^5.16.0",
     "gh-pages": "^2.0.1",
-    "husky": "^1.3.1",
+    "husky": "^2.2.0",
     "jest": "^24.7.1",
     "jsdoc": "^3.5.5",
-    "rollup": "^1.10.1",
+    "rollup": "^1.11.0",
     "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-commonjs": "^9.3.4",
     "rollup-plugin-json": "^4.0.0",
