--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "daisy-sdk",
-  "version": "0.3.0-beta.2",
+  "version": "0.3.0",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
   "jsnext:main": "dist/index.es.js",
