--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "daisy-sdk",
+  "name": "@daisypayments/daisy-sdk",
   "version": "0.5.2",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
