--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
     "@daisypayments/eslint-config": "^1.6.3",
+    "docdash": "^1.1.1",
     "eslint": "^5.16.0",
     "gh-pages": "^2.0.1",
     "husky": "^2.4.1",
