--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "private"
   ],
   "dependencies": {
+    "@daisypayments/smart-contracts": "^0.2.2-beta",
     "axios": "^0.18.0",
     "eth-sig-util": "^2.1.2",
     "eventemitter3": "^3.1.2"
