--- a/package.json
+++ b/package.json
@@ -43,5 +43,8 @@
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-node-resolve": "^5.2.0"
+  },
+  "optionalDependencies": {
+    "node-fetch": "^2.6.0"
   }
 }
