Update deps, improve http client, and add tests

--- a/package.json
+++ b/package.json
@@ -24,21 +24,23 @@
   ],
   "dependencies": {
     "@daisypayments/smart-contracts": "^0.2.2-beta",
-    "eth-sig-util": "^2.5.0",
+    "eth-sig-util": "^2.5.2",
     "eventemitter3": "^4.0.0"
   },
   "peerDependencies": {},
   "devDependencies": {
-    "@babel/core": "^7.6.4",
-    "@babel/plugin-external-helpers": "^7.2.0",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
-    "@babel/preset-env": "^7.6.3",
+    "@babel/core": "^7.7.5",
+    "@babel/plugin-external-helpers": "^7.7.4",
+    "@babel/plugin-proposal-class-properties": "^7.7.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.7.4",
+    "@babel/preset-env": "^7.7.6",
     "@daisypayments/eslint-config": "^1.7.0",
-    "eslint": "^6.6.0",
-    "husky": "^3.0.9",
+    "bignumber.js": "^9.0.0",
+    "dotenv": "^8.2.0",
+    "eslint": "^6.7.2",
+    "husky": "^3.1.0",
     "jest": "^24.9.0",
-    "rollup": "^1.26.2",
+    "rollup": "^1.27.9",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-json": "^4.0.0",
